# jig

./: .gitattributes  .gitignore  .mcp.json  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  server_compat.md
.github/scripts/: npm-install-smoke.js
.github/workflows/: audit.yml  census.yml  ci.yml  fuzz.yml  nightly-battery.yml  npm-publish.yml  pages.yml  release.yml
crates/jig-app/: Cargo.toml  tauri.conf.json
crates/jig-app/capabilities/: default.json
crates/jig-app/src/: commands.rs  dto.rs  lib.rs  main.rs  session.rs  wire.rs
crates/jig-app/ui/: app.css  app.js  index.html
crates/jig-cli/: Cargo.toml
crates/jig-cli/src/: advisor_view.rs  auth.rs  bench.rs  budget.rs  check.rs  context.rs  ecosystem.rs  eval.rs  judge_view.rs  lib.rs  main.rs  render.rs  report.rs  servers.rs  startup.rs
crates/jig-cli/src/serve/: mod.rs  sampling.rs  tools.rs
crates/jig-cli/src/snapshots/: jig__auth__tests__auth_human_no_challenge.snap  jig__auth__tests__auth_human_well_configured.snap  jig__bench__tests__bench_human.snap  jig__bench__tests__bench_json.snap  jig__budget__tests__budget_advise.snap  jig__budget__tests__budget_json.snap  jig__budget__tests__budget_markdown.snap  jig__budget__tests__budget_table.snap  jig__budget__tests__budget_table_multimodel.snap  jig__check__tests__check_human_advisor.snap  jig__check__tests__check_human_clean.snap  jig__check__tests__check_human_degraded.snap  jig__check__tests__check_human_percentile.snap  jig__check__tests__check_json.snap  jig__context__tests__context_client_list_human.snap  jig__context__tests__context_client_list_json.snap  jig__context__tests__context_human_anthropic.snap  jig__context__tests__context_human_claude_code.snap  jig__context__tests__context_human_openai.snap  jig__context__tests__context_json_openai.snap  jig__context__tests__context_raw_openai.snap  jig__ecosystem__tests__info_static.snap  jig__ecosystem__tests__search_results.snap  jig__eval__tests__eval_human_mixed.snap  jig__eval__tests__eval_human_pass.snap  jig__eval__tests__eval_junit_mixed.snap  jig__judge_view__tests__judge_human.snap  jig__judge_view__tests__judge_human_unavailable.snap  jig__judge_view__tests__judge_json.snap  jig__render__tests__call_result_error.snap  jig__render__tests__call_result_ok.snap  jig__render__tests__inspect_json.snap  jig__render__tests__inspect_report.snap  jig__render__tests__listen_summary_405.snap  jig__render__tests__listen_summary_opened.snap  jig__render__tests__prompt_result.snap  jig__render__tests__read_result_blob.snap  jig__render__tests__read_result_text.snap  jig__report__tests__report_html.snap  jig__servers__tests__servers_json.snap  (+1 more)
crates/jig-cli/tests/: auth_integration.rs  auth_login_integration.rs  check_integration.rs  context_integration.rs  eval_cli.rs  property.proptest-regressions  property.rs  serve_integration.rs
crates/jig-cli/tests/snapshots/: auth_integration__auth_e2e_no_challenge.snap  auth_integration__auth_e2e_no_pkce.snap  auth_integration__auth_e2e_well_configured.snap  auth_login_integration__auth_login_bad_iss.snap  auth_login_integration__auth_login_happy.snap  check_integration__check_e2e_clean.snap  check_integration__check_e2e_pollution.snap
crates/jig-core/: Cargo.toml
crates/jig-core/src/: advisor.rs  auth.rs  bench.rs  boot.rs  check.rs  client.rs  clients.rs  context.rs  credential.rs  discovery.rs  ecosystem.rs  error.rs  eval.rs  http.rs  injection.rs  judge.rs  lib.rs  login.rs  protocol.rs  tap.rs  tokens.rs  transport.rs
crates/jig-core/src/check/: code.rs  mod.rs  score_context.rs  score_description.rs  score_protocol.rs  score_robustness.rs  score_schema.rs  testkit.rs  util.rs
crates/jig-core/tests/: property.proptest-regressions  property.rs
crates/jig-mock-server/: Cargo.toml
crates/jig-mock-server/src/: http.rs  main.rs  provider.rs  sampling_client.rs
crates/jig-mock-server/tests/: bench.rs  chaos.rs  context.rs  discovery_e2e.rs  ecosystem.rs  error_variants.rs  eval.rs  http_integration.rs  integration.rs  parity.rs  sampling_bench.rs
crates/jig-mock-server/tests/snapshots/: chaos__giant_message_too_large.snap  chaos__immediate_exit_error.snap  chaos__malformed_json_timeout.snap  chaos__mid_session_crash_error.snap
data/: census-raw.json  census-servers.json  census2-calibration.json  census2-coded-calibration.json  census2-coded-raw.json  census2-raw.json  census2-servers.json  census2-v15-calibration.json  census2-v15-raw.json  dimension-spread.json  leaderboard-run2.json  leaderboard-run3.json  percentiles.json
docs/: conformance-alignment.md  percentiles-schema.md  rubric-changelog.md  token-budget.md
docs/census/: 2026-07-19-state-of-mcp-servers.md  METHOD-census2.md
docs/compat/: 2026-07-19-real-server-battery.md
docs/sop/: mcp-server-design-and-deployment.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/fuzz_command_splitter/: quoted_path
fuzz/corpus/fuzz_line_parser/: pollution  response
fuzz/corpus/fuzz_sse_parser/: comment_and_event  notification_then_response  single_event
fuzz/corpus/fuzz_tap_jsonl_roundtrip/: request  result
fuzz/fuzz_targets/: fuzz_command_splitter.rs  fuzz_line_parser.rs  fuzz_sse_parser.rs  fuzz_tap_jsonl_roundtrip.rs
npm/: README.md  package.json
npm/lib/: download.js  extract.js  paths.js  platform.js  release.js  unzip.js
npm/scripts/: install.js
npm/test/: download-sim.test.js  platform.test.js  release.test.js  unzip.test.js
npm/test/helpers/: zip.js
scripts/census/: run-census.js  summarize.js
scripts/census2/: README.md  aggregate-census2.js  build-candidates.js  run-census2.js
scripts/leaderboard/: build-leaderboard.js
site/: index.html
site/leaderboard/: index.html
