[workspace]
resolver = "2"
members = ["crates/jig-core", "crates/jig-cli", "crates/jig-mock-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Shodh-Labs/jig"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
    "process",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
clap = { version = "4", features = ["derive"] }
tiktoken-rs = "0.12"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
# Dev-scoped: used only by `jig-mock-server` (a test fixture) to implement the
# server side of the Streamable HTTP transport. Deliberately kept out of
# `jig-core` and `jig-cli`.
axum = "0.8"
# Test-only harness dependencies (never compiled into the shipped binaries):
# `proptest` powers the property-based tests, `insta` the snapshot tests.
proptest = "1"
insta = "1"
