[workspace]
resolver = "2"
members = ["crates/jig-core", "crates/jig-cli", "crates/jig-mock-server", "crates/jig-app"]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Shodh-Labs/jig"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
# float_roundtrip: the protocol tap must reproduce wire values EXACTLY.
# serde_json's default float parse is fast but can be off by up to 2 ULP on
# extreme values (found by fuzz_tap_jsonl_roundtrip on its first run:
# 1.000877015e+211 did not survive a JSONL round trip).
serde_json = { version = "1", features = ["float_roundtrip"] }
thiserror = "2"
tokio = { version = "1", features = [
    "process",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
clap = { version = "4", features = ["derive"] }
tiktoken-rs = "0.12"
# `.jig` eval-suite parsing. `serde_yaml` (dtolnay) is archived/unmaintained;
# `serde_yaml_ng` is the actively-maintained drop-in fork with the same serde
# API — including `deny_unknown_fields` and error `Display` carrying the
# `line`/`column` we surface as file:line diagnostics for a typo in a test file.
serde_yaml_ng = "0.10"
# The `regex` matcher for eval arg assertions. Already present transitively in
# the lockfile (pulled in via the TLS/token stack), so this is a free promotion
# to a direct dependency rather than a new tree entry.
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
# `jig auth --login` runs a real OAuth 2.1 authorization-code flow, which needs
# exactly two primitives we refuse to hand-roll: a CSPRNG (the RFC 7636 code
# verifier and the `state` nonce) and SHA-256 (the `S256` challenge). `ring`
# already builds in this tree as rustls' crypto provider, so promoting it to a
# direct dependency adds nothing to the binary — it just keeps us from writing
# our own SHA-256, which is the last thing an instrument should do.
ring = "0.17"
# base64url-without-padding: the encoding RFC 7636 §4.1/§4.2 mandates for the
# code verifier and its challenge. Already in the tree via reqwest/hyper-util.
base64 = "0.22"
# Dev-scoped: used only by `jig-mock-server` (a test fixture) to implement the
# server side of the Streamable HTTP transport. Deliberately kept out of
# `jig-core` and `jig-cli`.
axum = "0.8"
# Test-only harness dependencies (never compiled into the shipped binaries):
# `proptest` powers the property-based tests, `insta` the snapshot tests.
proptest = "1"
insta = "1"
