[package]
name = "jig-cli"
description = "The `jig` command-line workbench for MCP servers."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "jig"
path = "src/main.rs"

[dependencies]
jig-core = { path = "../jig-core", features = ["exact-anthropic"] }
clap.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
