[package]
name = "jig-cli"
description = "The `jig` command-line workbench for MCP servers."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# A library target holding the pure command/header parsers, so the property
# tests and cargo-fuzz targets can reach them (a bin-only module cannot be
# imported from another crate). The `jig` binary uses this same library.
name = "jig_cli"
path = "src/lib.rs"

[[bin]]
name = "jig"
path = "src/main.rs"

[dependencies]
jig-core = { path = "../jig-core", features = ["exact-anthropic"] }
clap.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
