[package]
name = "jig-core"
description = "Core engine for Jig: JSON-RPC/MCP client, stdio transport, and protocol tap."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tiktoken-rs.workspace = true
# `reqwest` is now a core dependency: it powers the Streamable HTTP transport
# (`HttpTransport`), which is first-class functionality, not an optional add-on.
reqwest = { workspace = true }

[features]
default = []
# Gates `jig budget --exact-anthropic`: the code that calls Anthropic's
# `count_tokens` endpoint. `reqwest` itself is always present now (see above),
# so this feature only toggles the Anthropic-specific request path.
exact-anthropic = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
