[package]
name = "jig-core"
description = "Core engine for Jig: JSON-RPC/MCP client, stdio transport, and protocol tap."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# `net` on top of the workspace feature set: `jig auth --login` binds an
# ephemeral loopback listener (RFC 8252 §7.3) to receive the OAuth callback.
tokio = { workspace = true, features = ["net"] }
tiktoken-rs.workspace = true
# `reqwest` is now a core dependency: it powers the Streamable HTTP transport
# (`HttpTransport`), which is first-class functionality, not an optional add-on.
reqwest = { workspace = true }
serde_yaml_ng.workspace = true
regex.workspace = true
# The two crypto primitives `jig auth --login` needs (see the workspace
# manifest for why they are not hand-rolled): CSPRNG + SHA-256, and the
# base64url encoding RFC 7636 defines the PKCE pair in.
ring.workspace = true
base64.workspace = true

[features]
default = []
# Gates `jig budget --exact-anthropic`: the code that calls Anthropic's
# `count_tokens` endpoint. `reqwest` itself is always present now (see above),
# so this feature only toggles the Anthropic-specific request path.
exact-anthropic = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = { workspace = true }
