[package]
name = "jig-mock-server"
description = "A minimal MCP server over stdio: an integration-test fixture and a handy scratch server for Jig."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "jig-mock-server"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
# `--http` mode implements the server side of the Streamable HTTP transport.
# axum + tokio are pulled in only by this fixture crate, never by jig-core/cli.
axum.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros"] }

[dev-dependencies]
jig-core = { path = "../jig-core" }
tokio.workspace = true
insta = { workspace = true }
